[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "paper-search-mcp"
version = "0.1.3"
authors = [
  { name = "P.S Zhang", email = "pengsongzhang96@gmail.com" },
]
description = "A MCP server for searching and downloading academic papers from multiple sources."
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "feedparser",
    "fastmcp>=2.3.4",
    "mcp[cli]>=1.6.0",
    "pypdf>=4.0.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=4.9.0",
    "httpx[socks]>=0.28.1",
    "starlette>=0.40.0",
    "h11>=0.14.0",
    "urllib3>=2.2.2",
    "requests>=2.32.2",
    "typer>=0.9.0",
    "rich>=13.0.0",
    "surrealdb>=0.3.0",
    "docling>=1.0.0",
]

[project.scripts]
paper-search = "paper_search_mcp.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["paper_search_mcp"]
